tests/resources/invalid/type/function/wrong_return_type.mamba
def g(x: Int) -> String => x + 10
